add network service
