# app/network/internal/server/grpc.go
@@ -1,19 +1,28 @@
 package server
 
 import (
+	v1 "social-network/api/network/interface/v1"
 	"social-network/app/network/internal/conf"
 	"social-network/app/network/internal/service"
 
+	jwt2 "github.com/golang-jwt/jwt/v4"
+
 	"github.com/go-kratos/kratos/v2/log"
+	"github.com/go-kratos/kratos/v2/middleware/auth/jwt"
+	"github.com/go-kratos/kratos/v2/middleware/logging"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/grpc"
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, ac *conf.Auth, logger log.Logger, s *service.NetworkInterface) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
+			logging.Server(logger),
+			jwt.Server(func(token *jwt2.Token) (interface{}, error) {
+				return []byte(ac.ApiKey), nil
+			}, jwt.WithSigningMethod(jwt2.SigningMethodHS256)),
 		),
 	}
 	if c.Grpc.Network != "" {
@@ -26,6 +35,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterGreeterServer(srv, greeter)
+	v1.RegisterNetworkInterfaceServer(srv, s)
 	return srv
 }
